force-app/main/default/objects/Trip__c/Trip__c.object-meta.xml
<CustomObject>
    <label>Trip</label>
    <nameField>
        <label>Trips Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trips</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>