force-app/main/default/objects/Trip__c/fields/CalculatedTotalTimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>CalculatedTotalTimeMinutes__c</fullName>
    <formula>TotalStopTime__c +  GoogleRouteTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Total Time Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>