force-app/main/default/objects/Trip__c/fields/CalculatedTotalTimeText__c.field-meta.xml
<CustomField>
    <fullName>CalculatedTotalTimeText__c</fullName>
    <label>Calculated Total Time Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>