force-app/main/default/objects/Trip__c/fields/CoPilot1__c.field-meta.xml
<CustomField>
    <fullName>CoPilot1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-pilot 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trips</relationshipName>
    <type>Lookup</type>
</CustomField>