force-app/main/default/objects/Trip__c/fields/CoPilot2__c.field-meta.xml
<CustomField>
    <fullName>CoPilot2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-pilot 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trips2</relationshipName>
    <type>Lookup</type>
</CustomField>