force-app/main/default/objects/Trip__c/fields/copilot__c.field-meta.xml
<CustomField>
    <fullName>copilot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>(optional)</inlineHelpText>
    <label>Co-pilot</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trips (Primary Helper)</relationshipLabel>
    <relationshipName>PrimaryHelper</relationshipName>
    <type>Lookup</type>
</CustomField>