force-app/main/default/objects/Trip__c/fields/CoPilotName__c.field-meta.xml
<CustomField>
    <fullName>CoPilotName__c</fullName>
    <formula>copilot__r.Full_Contact_Name__c</formula>
    <label>Co-pilot Name</label>
    <type>Text</type>
</CustomField>