force-app/main/default/objects/Trip__c/fields/CurrentUserDriverCopilot__c.field-meta.xml
<CustomField>
    <fullName>CurrentUserDriverCopilot__c</fullName>
    <formula>OR(
   Driver__c = $User.Id,
   CoPilot1__c = $User.Id,
   CoPilot2__c = $User.Id
)</formula>
    <label>Current User Driver or Co-pilot</label>
    <type>Checkbox</type>
</CustomField>