force-app/main/default/objects/Trip__c/fields/CustomName__c.field-meta.xml
<CustomField>
    <fullName>CustomName__c</fullName>
    <label>Custom Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>