force-app/main/default/objects/Trip__c/fields/Driver_Name_Truncate__c.field-meta.xml
<CustomField>
    <fullName>Driver_Name_Truncate__c</fullName>
    <formula>MID(Driver__r.FirstName , 0, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver Name Truncate</label>
    <type>Text</type>
</CustomField>