force-app/main/default/objects/Trip__c/fields/Full__c.field-meta.xml
<CustomField>
    <fullName>Full__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full</label>
    <type>Checkbox</type>
</CustomField>