force-app/main/default/objects/Trip__c/fields/GoogleRouteTime__c.field-meta.xml
<CustomField>
    <fullName>GoogleRouteTime__c</fullName>
    <label>Google Route Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>