force-app/main/default/objects/Trip__c/fields/NotesForDriver__c.field-meta.xml
<CustomField>
    <fullName>NotesForDriver__c</fullName>
    <inlineHelpText>(optional)</inlineHelpText>
    <label>Notes for Driver</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>