force-app/main/default/objects/Trip__c/fields/NumberOfDeliveriesOnHOPE__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDeliveriesOnHOPE__c</fullName>
    <label>Number Of Deliveries On HOPE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>