force-app/main/default/objects/Trip__c/fields/NumberOfDeliveriesOnNWFB__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDeliveriesOnNWFB__c</fullName>
    <label>Number Of Deliveries On NWFB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>