force-app/main/default/objects/Trip__c/fields/NumberOfPickupsOnCORP__c.field-meta.xml
<CustomField>
    <fullName>NumberOfPickupsOnCORP__c</fullName>
    <label>Number Of Pickups On CORP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>