force-app/main/default/objects/Trip__c/fields/NumberOfPickupsOnNWFB__c.field-meta.xml
<CustomField>
    <fullName>NumberOfPickupsOnNWFB__c</fullName>
    <label>Number Of Pickups On NWFB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>