force-app/main/default/objects/Trip__c/fields/NumberOfPickupsOnSB__c.field-meta.xml
<CustomField>
    <fullName>NumberOfPickupsOnSB__c</fullName>
    <label>Number Of Pickups On SB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>