force-app/main/default/objects/Trip__c/fields/PrimaryTimeframe__c.field-meta.xml
<CustomField>
    <fullName>PrimaryTimeframe__c</fullName>
    <label>Primary Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>