force-app/main/default/objects/Trip__c/fields/SecondaryHelper__c.field-meta.xml
<CustomField>
    <fullName>SecondaryHelper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>(optional)</inlineHelpText>
    <label>Secondary Helper</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trips (Secondary Helper)</relationshipLabel>
    <relationshipName>SecondaryHelper</relationshipName>
    <type>Lookup</type>
</CustomField>