force-app/main/default/objects/Trip__c/fields/Stop_Count__c.field-meta.xml
<CustomField>
    <fullName>Stop_Count__c</fullName>
    <label>Stop Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>