force-app/main/default/objects/Trip__c/fields/TotalStopTime__c.field-meta.xml
<CustomField>
    <fullName>TotalStopTime__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Stop Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>