force-app/main/default/objects/Trip__c/fields/TripStart__c.field-meta.xml
<CustomField>
    <fullName>TripStart__c</fullName>
    <label>Trip Start</label>
    <type>DateTime</type>
</CustomField>