force-app/main/default/objects/Trip__c/fields/Truck_Name_Truncate__c.field-meta.xml
<CustomField>
    <fullName>Truck_Name_Truncate__c</fullName>
    <formula>MID( Truck__r.Name , 0, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Truck Name Truncate</label>
    <type>Text</type>
</CustomField>