force-app/main/default/objects/Trip__c/listViews/Past_Trips_Vancouver.listView-meta.xml
<ListView>
    <fullName>Past_Trips_Vancouver</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>PrimaryTimeframe__c</columns>
    <columns>Location__c</columns>
    <columns>Origin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>NW Furniture Bank - Vancouver</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Past Trips Vancouver</label>
</ListView>