force-app/main/default/objects/Trip__c/listViews/Tacoma_Trips.listView-meta.xml
<ListView>
    <fullName>Tacoma_Trips</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Location__c</columns>
    <columns>Status__c</columns>
    <columns>Truck__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>contains</operation>
        <value>Tacoma</value>
    </filters>
    <label>Tacoma</label>
</ListView>