force-app/main/default/objects/Trip__c/listViews/Vancouver_Trips.listView-meta.xml
<ListView>
    <fullName>Vancouver_Trips</fullName>
    <columns>NAME</columns>
    <columns>Stop_Count__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>contains</operation>
        <value>Vancouver</value>
    </filters>
    <label>Vancouver</label>
</ListView>